syntax = "proto3";
package Proto;

import "Exchange.proto";
import "Currency.proto";

message Cash
{
  Exchange exchange = 1;
  Currency currency = 2;
  string account = 3;
  double total = 4;
  double available = 5;
  bool is_enough = 6;
  double margin = 7;
}
