syntax = "proto3";
package Proto;

import "Exchange.proto";
import "Request.proto";
import "Reply.proto";

message DimerRecord
{
  string instrument = 1;
}

message Dimer
{
  string name = 1;
  string pricer = 2;
}

message DimerReq
{
  RequestType type = 1;
  Exchange exchange = 2;
  repeated Dimer dimers = 3;
  string name = 4;
  string user = 5;
}

message DimerRep
{
  repeated Dimer dimers = 1;
  Reply result = 2;
}
