syntax = "proto3";
package Proto;

import "Exchange.proto";
import "Request.proto";
import "Reply.proto";

message HedgerRecord
{
  string instrument = 1;
}

message HedgerSpec
{
  string name = 1;
  string underlying = 2;
}

message HedgerReq
{
  RequestType type = 1;
  Exchange exchange = 2;
  repeated HedgerSpec hedgers = 3;
  string name = 4;
  string user = 5;
}

message HedgerRep
{
  repeated HedgerSpec hedgers = 1;
  Reply result = 2;
}
